# lookatni-file-markers

./: .gitignore  .npmignore  .vscodeignore  404.html  AGENTS.md  AZURE_DEVOPS_SETUP.md  CHANGELOG.md  CLI-README.md  CNAME  CODE_OF_CONDUCT.md  GO-MIGRATION.md  LICENSE  LOOKATNI-BUILD-REVOLUTION.md  Makefile  Makefile_old  ORG_FILES.txt  README.md  README_old.md  TYPESCRIPT_MIGRATION.md  azure-pipelines.yml  benchmark.txt  bkp-lookatni.txt  coverage.html  coverage.out  demo-code.txt  demo-html-markers.marked  demo-visual-markers.marked  full-lookatni-migration-tests.txt  full-test-scripts-lookatni.txt  full-test-templates-lookatni.txt  generated-from-extracted.txt  go.mod  go.sum  index.html  jcm.ltk  lookatni-file-markers-1.0.6.tgz  lookatni-revolution-1.0.0.manifest  lookatni.go  md_to_html.go  package-lock.json  (+13 more)
docs/: GLOBAL-CLI-IMPLEMENTATION.md  PUBLISH-GUIDE.md  README-REAL.md  README.md  README_NEW.md  analysis_kubex_-_lookatni_file_markers.json  automated_demo.sh  index.md  pyproject.toml  record_demo.sh
docs/CONTEXT/: OLD_SESSION_WITH_ERROR.md  TRANSIENT.md
docs/about/: changelog.md
docs/advanced/: api.md  typescript-scripts.md
docs/articles/: post.md
docs/community/: contributing.md
docs/demo/: lookatni_extract_demo.md
docs/examples/: fixtures.md  react-sharing.md  react.md
docs/features/: cli.md  extension.md  generation.md  profiles.md
docs/getting-started/: concepts.md  installation.md  node-library.md  quick-start.md
docs/guide/: commands.md  configuration.md  workflows.md
docs/prompt/: STAGE_1_REFACTOR.md  STAGE_1_REFACTOR_ATTACH.txt  (+2 more)
(+294 files in other folders)
