[project]
name = "lookatni-docs"
version = "1.2.0"
description = "Documentation for LookAtni File Markers"
authors = [{ name = "Rafa Mori", email = "faelmori@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

dependencies = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.4.0",
  "pymdown-extensions>=10.3.0",
  "mkdocs-minify-plugin>=0.7.0",
  "mkdocs-material-extensions>=1.3.1",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["docs/", "mkdocs.yml", "README.md", "LICENSE"]
